--- a/mini3/mini3.entitlements
+++ b/mini3/mini3.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.munhoz.dev.mini3</string>
+		<string>iCloud.com.wozniack.dev.mini3</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
