--- a/mini3/mini3.entitlements
+++ b/mini3/mini3.entitlements
@@ -13,7 +13,7 @@
 		<string>CloudKit</string>
 	</array>
 	<key>com.apple.security.app-sandbox</key>
-	<false/>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 </dict>
