--- a/mini3/mini3.entitlements
+++ b/mini3/mini3.entitlements
@@ -13,10 +13,8 @@
 		<string>CloudKit</string>
 	</array>
 	<key>com.apple.security.app-sandbox</key>
-	<true/>
+	<false/>
 	<key>com.apple.security.files.user-selected.read-only</key>
-	<true/>
-	<key>com.apple.security.network.client</key>
 	<true/>
 </dict>
 </plist>
